--- a/Unit 2/asyncActivityOct18.html
+++ b/Unit 2/asyncActivityOct18.html
@@ -14,13 +14,13 @@
             background-color: rgba(0, 0, 0, 0.479);
             padding: 20px;
             font-size: 30px;
-            text-align: left;
+            text-align: center;
         }
 
         .grid-item1 {
             background-color: black;
 
-            width: 1000px;
+            width: 1800px;
         }
     </style>
 
