--- a/Unit3_javascript/functionPractice/home.html
+++ b/Unit3_javascript/functionPractice/home.html
@@ -4,8 +4,10 @@
     <title></title>
   </head>
   <body>
+    <h1>JavaScript Banking Practice App</h1>
+    <button onclick="depositMoney()">Deposit</button>
+    <div id="data"></div>
 
-    <h1>JavaScript Practice</h1>
     <script src="functions.js"></script>
   </body>
 </html>
