did game basics

--- a/Unit 5/Truck Simluator/index.html
+++ b/Unit 5/Truck Simluator/index.html
@@ -27,7 +27,17 @@
    </p>
 </div>
 
-<button> Go to Next Month</button>
+<button onclick= "calculatedexpense"> Go to Next Month</button>
+<button onclick= "calculatedexpense"> Groceries
+  <button onclick= "calculatedexpense"> Rent/Mortgage
+    <button onclick= "calculatedexpense"> Car
+      <button onclick= "calculatedexpense"> Car Insurance
+        <button onclick= "calculatedexpense"> Clothes
+          <button onclick= "calculatedexpense"> Phone Bill
+            <button onclick= "calculatedexpense"> Medicare
+              <button onclick= "calculatedexpense"> Internet
+                <button onclick="calculatedexpense"> Relationships
+                  
 </div>
   </body>
 </html>
