--- a/Nolan H_Kuran S-Game/index.html
+++ b/Nolan H_Kuran S-Game/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="background"></div>
-    <img class="bird" src="https://apkbigs.com/media/2021/08/_3/760x450/flappy-bird-apk5_b6f6e.jpg" alt="bird-img">
+    <img class="bird" src="https://th.bing.com/th/id/R.c28bea9c299818baf9b333e98e3ab601?rik=COo4sZXyLC2ALg&pid=ImgRaw&r=0" alt="bird-img">
     <div class="message">
         Press Enter To Start Game
     </div>
@@ -20,7 +20,3 @@
 
 </html>
 
-// Tips to adjust game:
-// How to make moving background
-// How to make invisible/dodge bind/ mechanic
-// How to make image render
